homeassistant/CiliumNetworkPolicy-mosquitto.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosquitto
  namespace: homeassistant
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: homeassistant
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zigbee2mqtt
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
